# ttc-mm-eso

./: .gitignore  CHANGELOG.md  LICENSE.md  README.md  VERSION.md  pyproject.toml
docs/: implementation-plan.md
packaging/: ttc-mm.desktop
scripts/: build-appimage.sh
ttc_mm/: __init__.py  __main__.py  cli.py  downloader.py  gui.py  installer.py  patcher.py  path_resolver.py  validator.py
ttc_mm/compat/: .gitkeep  Bootstrap.lua  Init.lua  Price.lua
