[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ttc-mm"
version = "0.1.0"
description = "Download TTC price-table data and integrate with Master Merchant"
requires-python = ">=3.10"
license = { text = "MIT" }

[project.scripts]
ttc-mm = "ttc_mm.cli:main"

[tool.setuptools.packages.find]
where = ["."]

[tool.setuptools.package-data]
ttc_mm = ["compat/*.lua"]
